# MoodleDownloader

./: .gitignore  env.py.example  main.py  pyproject.toml
MoodleDownloader/: __init__.py  auth.py  client.py  config.py  database.py  downloader.py  exceptions.py  models.py  scraper.py  user_agent.py
