[project]
name = "moodle-downloader"
version = "0.1a2"
authors = [
    { name = "Leonardo Miranda Gomes", email = "l.mirandagomes.inf25@stud.bbbaden.ch" },
]
dependencies = [
    "requests >= 2.32",
    "beautifulsoup4 >= 4.14",
]

[project.urls]
Homepage = "https://github.com/Leonardo-MGomes/MoodleDownloader"
Repository = "https://github.com/Leonardo-MGomes/MoodleDownloader.git"
Issues = "https://github.com/Leonardo-MGomes/MoodleDownloader/issues"
